# CMake-template

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
resources/RS-232/: demo_tx.c
rs232/: CMakeLists.txt
rs232/src/: rs232.c
